<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@color/Greenhish">

    <View
        android:layout_width="wrap_content"
        android:layout_height="13dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="118dp"
        app:srcCompat="@drawable/logo" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="13dp" />

    <View
        android:layout_width="190dp"
        android:layout_height="3dp"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/white" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:fontFamily="@font/magnoliascript"
        android:gravity="center_horizontal"
        android:text="@string/to_do_list"
        android:textColor="@color/white"
        android:textSize="36sp" />

    <View
        android:layout_width="190dp"
        android:layout_height="3dp"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/white" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nautilus"
        android:gravity="center_horizontal"
        android:text="@string/add_tasks_to_your_list"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="11dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <View
            android:layout_width="75dp"
            android:layout_height="2dp" />

        <EditText
            android:id="@+id/inputTask"
            android:layout_width="273dp"
            android:layout_height="wrap_content"
            android:background="@drawable/square_shape"
            android:ems="10"
            android:fontFamily="@font/magnoliascript"
            android:hint="@string/enter_your_task"
            android:inputType="textPersonName"
            android:paddingLeft="10dp"
            android:textColor="@color/black" />

        <View
            android:layout_width="5dp"
            android:layout_height="2dp" />

        <TextView
            android:id="@+id/textAdd"
            android:layout_width="43dp"
            android:layout_height="match_parent"
            android:background="@drawable/circle"
            android:gravity="center"
            android:text="@string/plus"
            android:textColor="@color/white"
            android:textSize="25dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_weight="1" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:fontFamily="@font/magnoliascript"
        android:gravity="center_horizontal"
        android:text="@string/my_tasks"
        android:textColor="@color/white"
        android:textSize="36sp" />

    <View
        android:layout_width="250dp"
        android:layout_height="3dp"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/white" />


    <View
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <ListView
        android:id="@+id/lvTasks"
        android:layout_width="match_parent"
        android:layout_height="135dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <View
        android:layout_width="250dp"
        android:layout_height="3dp"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/white" />

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <View
            android:layout_width="75dp"
            android:layout_height="2dp" />

        <TextView
            android:id="@+id/textClear"
            android:layout_width="259dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/rounded"
            android:fontFamily="@font/nautilus"
            android:gravity="center"
            android:text="@string/clear_all"
            android:textColor="@color/white"
            android:textSize="25dp" />

        <View
            android:layout_width="75dp"
            android:layout_height="2dp" />
    </LinearLayout>


</LinearLayout>